Fixed Horizontal Scrolling

--- a/program/css/characterSelectionScreen.css
+++ b/program/css/characterSelectionScreen.css
@@ -1,5 +1,9 @@
 @import "./global.css";
 
+body {
+    overflow-x: hidden;
+}
+
 .mug {
     padding: 0px 5px;
     height: 62px;
